syntax = "proto3";
//option java_multiple_files = true;
option java_package = "com.quancheng.examples.model";
option java_outer_classname = "Hello";
package com.quancheng.examples.model;
// The request message containing the user's name.
message HelloRequest {
    string name = 1;
    map<string, Project> projects = 3;
    map<string, string> mapTest= 7;
    PhoneType phoneType = 8;
}
// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message Project {
   string id = 1;
}

enum PhoneType {
	    MOBILE = 0;
	    HOME = 1;
	    WORK = 2;
}