syntax = "proto3";
//option java_multiple_files = true;
option java_package = "com.quancheng.examples.service";
option java_outer_classname = "HelloServiceProto";
package com.quancheng.examples.service;
import "example/hello.proto";
// The greeting service definition.
service HelloService2 {
    // Sends a greeting
    rpc sayHello (com.quancheng.examples.model.HelloRequest) returns (com.quancheng.examples.model.HelloReply) {
    }
}